refactor: 加入文章: 在 csrf token 的保护之下
加入文章: 在 csrf token 的保护之下

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -29,6 +29,9 @@ layout: default
                     {{ content }}
                 </div>
 
+                <!-- 版权声明 -->
+                {% include copyright.html %}
+
                 <hr style="visibility: hidden;">
                 <ul class="pager">
                     {% if page.previous.url %}
